@@ -1,5 +1,7 @@
 Zmiany w QMPlay2 build 14.12.16:
 	- możliwość przewijania do tyłu w strumieniach sieciowych bez ponownego łączenia się z serwerem,
+	- MPRIS2 obsługuje już nazwy utworów nawet gdy nie zawierają one tytułu,
+	- dodany cache do klasy ustawień,
 
 Zmiany w QMPlay2 build 14.12.01:
 	- wczytywanie czcionek napisów z katalogu, w którym znajdują się napisy ASS/SSA,
